# osquery-rs-sdk

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
benches/: deserialization.rs  server_dispatch.rs
examples/: query.rs  table.rs
src/: lib.rs  mock.rs  osquery.rs
src/client/: manager.rs  mod.rs  named_pipe.rs
src/plugin/: config.rs  distributed.rs  logger.rs  table.rs
src/server/: manager.rs  mod.rs  threaded.rs
src/server/mock/: mod.rs
tests/: e2e.rs
