[package]
name = "osquery-rs-sdk"
version = "0.1.1"
description = "Rust SDK for building osquery extensions — tables, loggers, config providers, and distributed query handlers."
readme = "README.md"
authors = ["onixhdz <86901550+onixhdz@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/onixhdz/osquery-rs-sdk"
homepage = "https://github.com/onixhdz/osquery-rs-sdk"
documentation = "https://docs.rs/osquery-rs-sdk"
keywords = ["osquery", "security", "extensions", "thrift"]
categories = ["api-bindings", "development-tools"]
edition = "2024"
rust-version = "1.85.0"
exclude = [
    ".devcontainer/**",
]

[dependencies]
thrift = "0.23.0"
thiserror = "2"
tokio = { version = "1.19", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", default-features = false, features = [
    "winbase",
    "winerror",
    "ioapiset",
], optional = true }


[features]
default = ["server", "plugins"]
client = ["dep:winapi"]
server = ["client", "tokio/rt-multi-thread", "tokio/net", "tokio/io-util", "tokio/sync", "tokio/macros", "tokio/signal"]
plugins = ["server", "dep:serde_json", "dep:serde"]
tracing = ["dep:tracing"]
mock = ["client"]

[[example]]
name = "query"
crate-type = ["bin"]
required-features = ["client"]

[[example]]
name = "config"
crate-type = ["bin"]
required-features = ["plugins"]

[[example]]
name = "logger"
crate-type = ["bin"]
required-features = ["plugins"]

[[example]]
name = "table"
crate-type = ["bin"]
required-features = ["plugins"]

[[example]]
name = "distributed"
crate-type = ["bin"]
required-features = ["plugins"]

[[example]]
name = "writable_table"
crate-type = ["bin"]
required-features = ["plugins"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"
serde_json = "1"

[[bench]]
name = "deserialization"
harness = false
required-features = ["plugins"]

[[bench]]
name = "server_dispatch"
harness = false
required-features = ["plugins", "mock"]

[lints.rust]
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
trivial_casts = "warn"
missing_debug_implementations = "warn"

[lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Selective overrides for pedantic lints that are too noisy for this crate
module_name_repetitions = "allow"
struct_excessive_bools = "allow"  # ColumnDefinition has 5 boolean flags by design (index, required, additional, optimized, hidden)
# Restriction lints (not in pedantic, opted in explicitly).
# Panic sources: extension code runs inside the osquery process tree, so
# panics take down the whole extension.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
manual_assert = "warn"
indexing_slicing = "warn"
panic_in_result_fn = "warn"
todo = "warn"
unimplemented = "warn"
# Diagnostics and polish.
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
redundant_clone = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev.package."*"]
opt-level = 2
